--- a/XYZReader/src/main/res/layout/appbar.xml
+++ b/XYZReader/src/main/res/layout/appbar.xml
@@ -1,26 +1,37 @@
 <android.support.design.widget.AppBarLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appbar"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:layout_height="@dimen/list_collapsing_toolbar_height"
+    android:fitsSystemWindows="true"
+    android:theme="@style/Theme.Bacon">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_container"
+    <android.support.design.widget.CollapsingToolbarLayout
+        android:id="@+id/collapsing_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="?attr/colorPrimary"
-        android:paddingTop="20dp"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        app:contentScrim="?android:attr/colorPrimary"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
+        app:expandedTitleTextAppearance="@style/TextAppearanceAppBarDisplay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            app:layout_collapseMode="pin"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:elevation="@dimen/list_toolbar_elevation" />
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/logo" />
-
-    </android.support.v7.widget.Toolbar>
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:src="@drawable/logo"
+            android:layout_margin="@dimen/list_toolbar_image_margin" />
+    </android.support.design.widget.CollapsingToolbarLayout>
 
 </android.support.design.widget.AppBarLayout>
